# wshow

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  stm32.ioc
Inc/: stm32f1xx_hal_conf.h
MDK-ARM/: stm32.uvoptx  stm32.uvprojx
Src/: gpio.c  main.c  stm32f1xx_it.c
pc/: baudratecombobox.cpp  baudratecombobox.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.pro  serialportcombobox.cpp  serialportcombobox.h
pc/simulation/: display.c  display.h  img_40x40.c  ledbar.c  ledbar.h  list.c  list.h  mem.c  mem.h
stm32/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  stm32.ioc
stm32/Inc/: i2c.h  stm32f1xx_hal_conf.h
stm32/MDK-ARM/: stm32.uvoptx  stm32.uvprojx
stm32/Src/: gpio.c  i2c.c  main.c  usart.c
stm32/user/: led.c  led.h  mpu6050.c  mpu6050.h  newlib.c  user.c
stm32/user/eMPL/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c  platform_stm32.h
user/: led.c  led.h  user.c  user.h
user/eMPL/: platform_stm32.h
