CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET( STM32_CMAKE_PATH "${CMAKE_SOURCE_DIR}/../../stm32/build-tools/stm32-cmake" )

SET( TOOLCHAIN_PREFIX "/Users/lmy/Tools" )
SET( TARGET_TRIPLET "arm-none-eabi" )
SET( CMAKE_MODULE_PATH "${STM32_CMAKE_PATH}/cmake" )
SET( CMAKE_TOOLCHAIN_FILE "${STM32_CMAKE_PATH}/cmake/gcc_stm32.cmake" )
SET( STM32Cube_DIR "/Users/lmy/STM32Cube/Repository/STM32Cube_FW_F1_V1.4.0" )

SET( CMAKE_BUILD_TYPE Debug )
SET( STM32_CHIP "STM32F103ZE" )
SET( STM32_FAMILY "F1" )

# Linker script
#STM32_FLASH_ORIGIN=0x08000000
#STM32_RAM_ORIGIN=0x20000000
#STM32_FLASH_SIZE=
#STM32_RAM_SIZE=
#STM32_MIN_STACK_SIZE=
#STM32_MIN_HEAP_SIZE=
#STM32_CCRAM_ORIGIN=
#STM32_CCRAM_SIZE=

PROJECT(stm32)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(STM32HAL COMPONENTS i2c rcc gpio tim rtc uart usart REQUIRED)
FIND_PACKAGE(CMSIS REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMSIS_INCLUDE_DIRS}
    ${STM32HAL_INCLUDE_DIR}
    ${CMAKE_SOURCE_DIR}/Inc
    ${CMAKE_SOURCE_DIR}/user
)

LINK_DIRECTORIES(
)

ADD_DEFINITIONS(
	-DMOTION_DRIVER_TARGET_STM32
	-DMPU6050
)

SET(PROJECT_SOURCES
	Src/main.c
	Src/stm32f1xx_hal_msp.c
	Src/stm32f1xx_it.c
	Src/gpio.c
	Src/i2c.c
	Src/usart.c
	user/user.c
	user/led.c
	user/eMPL/inv_mpu.c
	user/eMPL/inv_mpu_dmp_motion_driver.c

)

SET(STM32_LINKER_SCRIPT ${CMSIS_LINKER_SCRIPT})

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES} ${CMSIS_SOURCES} ${STM32HAL_SOURCES} )
#TARGET_LINK_LIBRARIES( ${CMAKE_PROJECT_NAME} emwin )

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
STM32_PRINT_SIZE_OF_TARGETS(${CMAKE_PROJECT_NAME})
